# nornir_validate

./: .gitignore  .readthedocs.yaml  ADD_NEW_FEATURE.md  LICENSE  README.md  cmds_output.raw  compliance_report.py  example_import_nr_val.py  example_val_script.py  feature_builder.py  hme_subfeat_index.yml  input_data.yml  input_data_ios_full.yml  input_index.yml  new.py  nornir_validate.py  nr_val.py  orig.py  pyproject.toml  rebuild_test_files.py  requirements.txt
.github/workflows/: ci.yml  publish.yml
ORIG_before_feature_rework/: input_data.yml  system_actual_state.py-ORIG  system_desired_state.j2-ORIG  test_acl.py
ORIG_before_feature_rework/test_ORIG_before_feature_rework/: test_validations.py-ORIG
ORIG_before_feature_rework/validation_builder/: README.md  actual_state.json  desired_state.yml  val_builder.py  val_static_cmd_output.py
ORIG_before_feature_rework/validation_builder/ORIG_ios_val_files/: actual_state.py
ORIG_before_feature_rework/validation_builder/inventory/: hosts.yml
ORIG_before_feature_rework/validation_builder/to_test_with_napalm_val/: validate.yml
ORIG_before_feature_rework/validation_builder/validate_files/ios/: actual_state.json  desired_state.j2  input_data.yml
content/: run_example_config.yml  terminalizer_val_example.yml
docs/: conf.py  index.rst  validations.rst
docs/contribute/: fmt_lint_test_doc_pr.rst  index.rst  new_sudfeature.rst  newos_exist_subfeat.rst  structure.rst  test_appendix.rst  test_lint_doc.rst
docs/tutorial/: auto_gen_val.rst  index.rst  run_nr_val.rst
example_validation_files/: all_validations.yml  asa_validations.yml  wlc_validations.yml
example_validations/: all_validations.yml  asa_validations.yml  ios_validations.yml  nxos_validations.yml  wlc_validations.yml
example_validations/subfeature_index_files/: all_subfeat_index.yml  asa_subfeat_index.yml  ios_subfeat_index.yml  nxos_subfeat_index.yml  viptela_subfeat_index.yml  wlc_subfeat_index.yml
example_validations/validation_files/: all_validations.yml  asa_validations.yml  ios_validations.yml  nxos_validations.yml  palo_validations.yml  viptela_validations.yml  wlc_validations.yml
examples/: example_val_script.py  full_example_input_data.yml  iosxe_example_input_data.yml
feature_templates/auth_session/: auth_session_actual_state.py  auth_session_desired_state.j2
feature_templates/bgp/: bgp_desired_state.j2
feature_templates/evpn/: evpn_actual_state.py  evpn_desired_state.j2
feature_templates/fhr/: fhr_actual_state.py  fhr_desired_state.j2
feature_templates/fw/: fw_actual_state.py  fw_desired_state.j2
feature_templates/interface/: interface_actual_state.py  interface_desired_state.j2
feature_templates/intf_bonded/: intf_bonded_actual_state.py  intf_bonded_desired_state.j2
feature_templates/layer2/: layer2_actual_state.py  layer2_desired_state.j2
feature_templates/neighbor/: neighbor_actual_state.py  neighbor_desired_state.j2
feature_templates/neighbors/: neighbors_actual_state.py  neighbors_desired_state.j2
feature_templates/ospf/: ospf_actual_state.py
feature_templates/redundancy/: redundancy_actual_state.py  redundancy_desired_state.j2
feature_templates/route_protocol/: route_protocol_actual_state.py  route_protocol_desired_state.j2
feature_templates/route_table/: route_table_actual_state.py  route_table_desired_state.j2
feature_templates/sdwan/: sdwan_actual_state.py  sdwan_desired_state.j2
feature_templates/system/: system_actual_state.py  system_desired_state.j2
feature_templates/vpn/: vpn_actual_state.py  vpn_desired_state.j2
feature_templates/wifi/: wifi_actual_state.py  wifi_desired_state.j2
for_building_features/: all_new_formats_for_actual_state.py  desired_state.j2
for_building_features/templates/: actual_state.py  desired_state.j2
for_building_features/tests/: desired_actual_cmd.py
hme_val_files/: HME-AIR-WLC01_vals.yml  HME-ASA-XFW01_vals.yml  HME-C3560-SWI01_vals.yml
inventory/: defaults.yml  groups.yml  hosts.yml
ntc_temp/: cisco_ios_show_endpoint-tracker.textfsm  cisco_ios_show_endpoint-tracker_tracker-group.textfsm  cisco_ios_show_sdwan_omp_peers.textfsm  cisco_ios_show_sdwan_tunnel_sla.textfsm  cisco_viptela_show_control_connections.textfsm  index  paloalto_panos_show_routing_route.textfsm
scripts/: feature_builder.py  rebuild_test_files.py
skeleton_new_feature/: subfeature_index.yml
skeleton_new_feature/newfeature/: newfeature_actual_state.py  newfeature_desired_state.j2
src/nornir_validate/: __init__.py  compliance_report.py  core.py  nr_val.py
src/nornir_validate/feature_templates/fhr/: fhr_actual_state.py
src/nornir_validate/feature_templates/fw/: fw_desired_state.j2
src/nornir_validate/feature_templates/interface/: interface_actual_state.py
src/nornir_validate/feature_templates/neighbor/: neighbor_actual_state.py  neighbor_desired_state.j2
src/nornir_validate/feature_templates/system/: system_desired_state.j2
src/nornir_validate/index_files/: all_index.yml  asa_index.yml  cisco_ios_index.yml  cisco_nxos_index.yml  cisco_wlc_index.yml  ios_index.yml  palo_index.yml  paloalto_panos_index.yml  viptela_index.yml  wlc_index.yml
templates/: actual_state.py  desired_state.j2
tests/: test_nr_val.py  test_validations.py
tests/os_test_files/cisco_asa/: subfeature_index.yml
tests/os_test_files/cisco_ios/: subfeature_index.yml
tests/os_test_files/cisco_nxos/: subfeature_index.yml
tests/os_test_files/cisco_viptela/: subfeature_index.yml
tests/os_test_files/cisco_wlc/: subfeature_index.yml
tests/os_test_files/paloalto_panos/: subfeature_index.yml
tests/test_data/: desired_actual_cmd.py  input_data.yml  input_data_validations.yml
tests/test_inventory/: groups.yml  hosts.yml  hosts_validations.yml
validation_builder/: README.md  actual_state.json  actual_state.py  desired_state.j2  desired_state.yml  input_data.yml  val_build.py  val_builder.py  validation_builder.py
validation_builder/inventory/: hosts.yml
validation_builder/to_test_with_napalm_val/: nap_val.py
validation_builder/validate_files/ios/: desired_state.j2  desired_state.yml  input_data.yml
(+227 files in other folders)
