[project]
name = "nornir-validate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "napalm>=5.1.0",
    "nornir-jinja2>=0.2.0",
    "nornir-netmiko>=1.0.1",
    "nornir-rich",
    "nornir-utils>=0.2.0",
    "pyaml>=25.7.0",
]
[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.4",
    "typing>=3.10.0.0",
]

[tool.mypy]
ignore_missing_imports = true # stops missing library stubs or py.typed marker warning

# [tool.ruff]
# line-length = 88 
[tool.ruff.lint]
# RUFF DEFAULTS
# (These are all the default groups, even if you don’t currently select them)
# select = [
#     "F",    # Pyflakes – detects syntax errors and basic mistakes
#     "E4",   # Pycodestyle errors (part of E group)
#     "E7",   # Pycodestyle E7xx errors (naming, etc.)
#     "E9",   # Pycodestyle E9xx errors (syntax)
# ]
select = [
    "E",    # Pycodestyle errors (style issues)
    "UP",   # Pyupgrade – upgrades syntax to newer Python versions
    "I",    # isort – import ordering checks
    "D",    # Pydocstyle – docstring formatting
    "B",    # Flake8-bugbear – common bug patterns
    "SIM",  # Flake8-simplify – code simplification hints
    "ANN",  # Flake8-annotations – enforces type annotation style
    # Extra I added
    "YTT",  # Flake8-2020 – checks for Python 2020 best practices
    "N",    # PEP8 Naming – naming conventions
    "A",    # Flake8-builtins – misuse of Python built-in names
    "PT",   # Flake8-pytest-style – pytest best practices
    "TC",   # Flake8-type-checking – proper import of typing in type checks
    "ARG",  # Flake8-unused-arguments – flags unused function arguments
    "EM",   # Flake8-errmsg – error message style
]
ignore = [
    "E501",  # Pycodestyle - line too long
    "D1",    # Pydocstyle - missing docstring in public module, class, or function
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
nornir-rich = { git = "https://github.com/sjhloco/nornir_rich", rev = "format_string_result" }

